Error for sending otp fixed

--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 MAIL_HOST = smtp.gmail.com
 MAIL_USER = tanmayrane51@gmail.com
-MAIL_PASS = dzgvtybtweasxrqd
+MAIL_PASS = guvqdnmautylfeiy
 
 JWT_SECRET = "tanmay"
 
