Creating post by uploading image to cloudinary added

--- a/server/.env
+++ b/server/.env
@@ -4,9 +4,10 @@ MAIL_PASS = guvqdnmautylfeiy
 
 JWT_SECRET = "tanmay"
 
-CLOUD_NAME = drvlktf2h
-API_KEY = 422883961873369
-API_SECRET = ao3gCb8il3MJdRecSU2X4gL6GTs
+# CLOUD_NAME = drvlktf2h
+CLOUD_NAME = dgnwebtjn
+API_KEY = 192426624171768
+API_SECRET = 775IeHeDiK0WbQOVMEbajDhJGKs
 FOLDER_NAME = "RateMyAnime"
 
 DATABASE_URL = mongodb+srv://tanmay18:tanmay18@cluster0.vtidlfm.mongodb.net/rateMyAnime
