--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "concurrently": "^8.2.0",
+    "dayjs": "^1.11.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.3",
@@ -16,6 +17,7 @@
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
+    "react-tailwindcss-datepicker": "^1.6.6",
     "react-type-animation": "^3.1.0",
     "reducers": "^3.0.0-alpha",
     "swiper": "^10.1.0",
