Login and registration functionality through UI added only thr cookie fetching is remaining

--- a/server/.env
+++ b/server/.env
@@ -2,7 +2,7 @@ MAIL_HOST = smtp.gmail.com
 MAIL_USER = tanmayrane51@gmail.com
 MAIL_PASS = guvqdnmautylfeiy
 
-JWT_SECRET = "tanmay"
+JWT_SECRET = "naruto"
 
 # CLOUD_NAME = drvlktf2h
 CLOUD_NAME = dgnwebtjn
