--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "^5.0.1",
     "react-tailwindcss-datepicker": "^1.6.6",
     "react-type-animation": "^3.1.0",
+    "react-youtube": "^10.1.0",
     "reducers": "^3.0.0-alpha",
     "redux": "^4.2.1",
     "swiper": "^10.1.0",
