--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "axios": "^1.4.0",
     "concurrently": "^8.2.0",
     "dayjs": "^1.11.9",
+    "flowbite": "^1.8.1",
+    "flowbite-react": "^0.6.1",
     "react": "^18.2.0",
+    "react-calendar": "^4.6.0",
     "react-dom": "^18.2.0",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.45.3",
